style.cssの修正版をアップしました

--- a/kadai_015/style.css
+++ b/kadai_015/style.css
@@ -1,5 +1,5 @@
 /* Div(名前～血液型)箇所の設定 */
-#basic{
+#basic p{
   font-family: "Arial","Meiryo",sans-serif;
   font-size: 20px;
   text-align: center;
@@ -8,27 +8,27 @@
 /*文字がブルーの箇所*/
 .blue, #basic > .blue{      
   font-family: "Arial","Meiryo",sans-serif;
-  font-size: 40px; 
+  /* font-size: 20ex;  */
   color: skyblue;
   text-align: center;
 }
 /*文字がピンクの箇所*/
 .pink, #basic > .pink{
   font-family: "Arial","Meiryo",sans-serif;
-  font-size: 40px; 
+  
   color: rgb(255,192,203);
   text-align: center;
 }
 
 /* h1のWEBフォント設定 */
 #google-fonts{
-  font-family: "Noto Sans JP", serif;
+  font-family: "Noto Sans JP", sans-serif;
   font-optical-sizing: auto;
   font-weight: 400;
   font-style: normal;
-  
+
   /* h1フォント装飾の設定 */
-  font-size: 40px;
+  font-size: 2rem;
   letter-spacing: 1.2em;
   text-shadow: 2px 2px 4px gray;
   border-bottom: solid 3px rgb(115,115,114);
